@@ -1,19 +1,19 @@
 /*!
-* This program is free software; you can redistribute it and/or modify it under the
-* terms of the GNU Lesser General Public License, version 2.1 as published by the Free Software
-* Foundation.
-*
-* You should have received a copy of the GNU Lesser General Public License along with this
-* program; if not, you can obtain a copy at http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html
-* or from the Free Software Foundation, Inc.,
-* 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-*
-* This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
-* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-* See the GNU Lesser General Public License for more details.
-*
-* Copyright (c) 2002-2013 Pentaho Corporation..  All rights reserved.
-*/
+ * This program is free software; you can redistribute it and/or modify it under the
+ * terms of the GNU Lesser General Public License, version 2.1 as published by the Free Software
+ * Foundation.
+ *
+ * You should have received a copy of the GNU Lesser General Public License along with this
+ * program; if not, you can obtain a copy at http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html
+ * or from the Free Software Foundation, Inc.,
+ * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+ * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU Lesser General Public License for more details.
+ *
+ * Copyright (c) 2002-2013 Pentaho Corporation..  All rights reserved.
+ */
 
 package org.pentaho.ui.xul.binding;
 
@@ -23,15 +23,16 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
 
-
 public abstract class BindingConvertor<V, R> {
   private static final long serialVersionUID = 1L;
 
-  public enum Direction{FORWARD, BACK};
-  
-  public abstract R sourceToTarget(V value);
+  public enum Direction {
+    FORWARD, BACK
+  };
 
-  public abstract V targetToSource(R value);
+  public abstract R sourceToTarget( V value );
+
+  public abstract V targetToSource( R value );
 
   private static BindingConvertor<Integer, String> integer2String = new Integer2String();
   private static BindingConvertor<String, Integer> string2Integer = new String2Integer();
@@ -45,14 +46,14 @@ public abstract class BindingConvertor<V, R> {
 
   private static BindingConvertor<Collection, Object[]> collection2ObjectArray = new Collection2ObjectArray();
 
-  public static BindingConvertor<Collection, Object[]> collection2ObjectArray(){
+  public static BindingConvertor<Collection, Object[]> collection2ObjectArray() {
     return collection2ObjectArray;
   }
 
   public static BindingConvertor<Integer, String> integer2String() {
     return integer2String;
   }
-  
+
   public static BindingConvertor<Integer, Boolean> integer2Boolean() {
     return integer2Boolean;
   }
@@ -64,52 +65,53 @@ public abstract class BindingConvertor<V, R> {
   public static BindingConvertor<Long, String> long2String() {
     return long2String;
   }
-  
+
   public static BindingConvertor<Date, String> date2String() {
-    return date2String(new SimpleDateFormat("MM-dd-yyyy")); //$NON-NLS-1$
+    return date2String( new SimpleDateFormat( "MM-dd-yyyy" ) ); //$NON-NLS-1$
   }
-  
-  public static BindingConvertor<Date, String> date2String(final DateFormat format) {
-    return new Date2String(format);
+
+  public static BindingConvertor<Date, String> date2String( final DateFormat format ) {
+    return new Date2String( format );
   }
-  
+
   public static BindingConvertor<String, String> string2String() {
     return string2String;
   }
-  
+
   public static BindingConvertor<Boolean, String> boolean2String() {
-    return boolean2String ;
+    return boolean2String;
   }
-  
+
   public static BindingConvertor<Double, String> double2String() {
     return double2String;
   }
-  
+
   public static BindingConvertor<String, Double> string2Double() {
     return string2Double;
   }
 
   /**
    * Converts an Object into a Boolean, false if the object is null, true otherwise
+   * 
    * @return
    */
   public static BindingConvertor<Object, Boolean> object2Boolean() {
     return object2Boolean;
   }
 
-  public static BindingConvertor<String, String> truncatedString(int length) {
-    return new TruncatedStringBindingConvertor(length);
+  public static BindingConvertor<String, String> truncatedString( int length ) {
+    return new TruncatedStringBindingConvertor( length );
   }
 
-  static class Collection2ObjectArray extends BindingConvertor<Collection, Object[]>{
+  static class Collection2ObjectArray extends BindingConvertor<Collection, Object[]> {
     @Override
-    public Object[] sourceToTarget(Collection value) {
+    public Object[] sourceToTarget( Collection value ) {
       return value.toArray();
     }
 
     @Override
-    public Collection targetToSource(Object[] value) {
-      return Arrays.asList(value);
+    public Collection targetToSource( Object[] value ) {
+      return Arrays.asList( value );
     }
   }
 
@@ -117,40 +119,40 @@ public abstract class BindingConvertor<V, R> {
    * Canned BindingConverter Implementations here
    */
   static class Integer2String extends BindingConvertor<Integer, String> {
-    public String sourceToTarget(Integer value) {
-      if (value != null) {
+    public String sourceToTarget( Integer value ) {
+      if ( value != null ) {
         return value.toString();
       } else {
         return ""; //$NON-NLS-1$
       }
     }
-  
-    public Integer targetToSource(String value) {
-      if (value != null) {
+
+    public Integer targetToSource( String value ) {
+      if ( value != null ) {
         try {
-          return Integer.valueOf(value);
-        } catch (NumberFormatException e) {            
-          return new Integer(0);
+          return Integer.valueOf( value );
+        } catch ( NumberFormatException e ) {
+          return new Integer( 0 );
         }
       }
-      return new Integer(0);
+      return new Integer( 0 );
     }
   }
 
   static class String2Integer extends BindingConvertor<String, Integer> {
-    public Integer sourceToTarget(String value) {
-      if (value != null) {
+    public Integer sourceToTarget( String value ) {
+      if ( value != null ) {
         try {
-          return Integer.valueOf(value);
-        } catch (NumberFormatException e) {            
-          return new Integer(0);
+          return Integer.valueOf( value );
+        } catch ( NumberFormatException e ) {
+          return new Integer( 0 );
         }
       }
-      return new Integer(0);
+      return new Integer( 0 );
     }
-  
-    public String targetToSource(Integer value) {
-      if (value != null) {
+
+    public String targetToSource( Integer value ) {
+      if ( value != null ) {
         return value.toString();
       } else {
         return ""; //$NON-NLS-1$
@@ -159,128 +161,135 @@ public abstract class BindingConvertor<V, R> {
   }
 
   static class Long2String extends BindingConvertor<Long, String> {
-    public String sourceToTarget(Long value) {
-      if (value != null) {
+    public String sourceToTarget( Long value ) {
+      if ( value != null ) {
         return value.toString();
       } else {
         return ""; //$NON-NLS-1$
       }
     }
-  
-    public Long targetToSource(String value) {
-      if (value != null) {
-        try {            
-          return Long.valueOf(value); 
-        } catch (NumberFormatException e) {
-          return new Long(0);
+
+    public Long targetToSource( String value ) {
+      if ( value != null ) {
+        try {
+          return Long.valueOf( value );
+        } catch ( NumberFormatException e ) {
+          return new Long( 0 );
         }
       }
-      return new Long(0);
+      return new Long( 0 );
     }
   }
 
   static class Date2String extends BindingConvertor<Date, String> {
     DateFormat format = null;
-    
+
     public Date2String() {
-      format = new SimpleDateFormat("MM-dd-yyyy"); //$NON-NLS-1$
+      format = new SimpleDateFormat( "MM-dd-yyyy" ); //$NON-NLS-1$
     }
-    public Date2String(DateFormat format) {
+
+    public Date2String( DateFormat format ) {
       this.format = format;
     }
-    
-    public String sourceToTarget(Date value) {
-      if (value == null) {
+
+    public String sourceToTarget( Date value ) {
+      if ( value == null ) {
         return ""; //$NON-NLS-1$
       }
-      return format.format(value);
+      return format.format( value );
     }
-  
-    public Date targetToSource(String value) {
+
+    public Date targetToSource( String value ) {
       try {
-        return format.parse(value);
-      } catch (Exception e) {
+        return format.parse( value );
+      } catch ( Exception e ) {
         return null;
       }
     }
   }
 
   static class String2String extends BindingConvertor<String, String> {
-    public String sourceToTarget(String value) {
+    public String sourceToTarget( String value ) {
       return value;
     }
 
-    public String targetToSource(String value) {
-      return value; 
+    public String targetToSource( String value ) {
+      return value;
     }
   }
-                                                                       
+
   static class Boolean2String extends BindingConvertor<Boolean, String> {
-    public String sourceToTarget(Boolean value) {
+    public String sourceToTarget( Boolean value ) {
       return value.toString();
     }
 
-    public Boolean targetToSource(String value) {
-      return Boolean.parseBoolean(value);
+    public Boolean targetToSource( String value ) {
+      return Boolean.parseBoolean( value );
     }
-    
-  }
-  
-  static class String2Double extends BindingConvertor< String, Double> { 
 
-    public Double sourceToTarget(String toDouble) {
-      try{
-        return Double.valueOf(toDouble);
-      }catch(Exception e){
-        return new Double(0);
+  }
+
+  static class String2Double extends BindingConvertor<String, Double> {
+
+    public Double sourceToTarget( String toDouble ) {
+      try {
+        return Double.valueOf( toDouble );
+      } catch ( Exception e ) {
+        return new Double( 0 );
       }
     }
 
-    public String targetToSource(Double toString) {
-      if (toString != null){
+    public String targetToSource( Double toString ) {
+      if ( toString != null ) {
         return toString.toString();
-      }else{
+      } else {
         return "";
       }
     }
   }
-  
-  static class Double2String extends BindingConvertor< Double, String> { 
 
-    public String sourceToTarget(Double toString) {
-      if (toString != null){
+  static class Double2String extends BindingConvertor<Double, String> {
+
+    public String sourceToTarget( Double toString ) {
+      if ( toString != null ) {
         return toString.toString();
-      }else{
+      } else {
         return "";
       }
     }
 
-    public Double targetToSource(String toDouble) {
-      try{
-        return Double.valueOf(toDouble);
-      }catch(Exception e){
-        return new Double(0);
+    public Double targetToSource( String toDouble ) {
+      try {
+        return Double.valueOf( toDouble );
+      } catch ( Exception e ) {
+        return new Double( 0 );
       }
     }
   }
 
   static class Integer2Boolean extends BindingConvertor<Integer, Boolean> {
-    public Boolean sourceToTarget(Integer value) {
-      if (value == null) return false;
+    public Boolean sourceToTarget( Integer value ) {
+      if ( value == null ) {
+        return false;
+      }
       return value > 0;
     }
-    public Integer targetToSource(Boolean value) {
-      if (value == null) return 0;
+
+    public Integer targetToSource( Boolean value ) {
+      if ( value == null ) {
+        return 0;
+      }
       return value ? 1 : 0;
     }
-    
+
   }
 
   static class Object2Boolean extends BindingConvertor<Object, Boolean> {
-    public Boolean sourceToTarget(Object value) {
+    public Boolean sourceToTarget( Object value ) {
       return value != null;
     }
-    public Object targetToSource(Boolean value) {
+
+    public Object targetToSource( Boolean value ) {
       // can't logically construct this binding
       return null;
     }
@@ -289,18 +298,20 @@ public abstract class BindingConvertor<V, R> {
 
   static class TruncatedStringBindingConvertor extends BindingConvertor<String, String> {
     private int length = 100;
-    public TruncatedStringBindingConvertor(int length) {
+
+    public TruncatedStringBindingConvertor( int length ) {
       this.length = length;
     }
-    public String sourceToTarget(String value) {
-      if (value.length() > length) {
-        return value.substring(0, length) + "...";
+
+    public String sourceToTarget( String value ) {
+      if ( value.length() > length ) {
+        return value.substring( 0, length ) + "...";
       } else {
         return value;
       }
     }
 
-    public String targetToSource(String value) {
+    public String targetToSource( String value ) {
       return value;
     }
   }
